--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ PyJWT==2.1.0
 pytest==6.2.4
 pytest-django==4.4.0
 pytest-pythonpath==0.7.3
+pandas==1.3.5
+djangorestframework-simplejwt==4.7.2
+django-filter==2.4.0
